--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
 <navagation></navagation>
 <router-outlet></router-outlet>
-<app-footer></app-footer>
+<div class="mt-auto border-top px-3">
+  <app-footer></app-footer>
+</div>
+
 
