--- a/src/app/nav.component.html
+++ b/src/app/nav.component.html
@@ -1,7 +1,7 @@
 <div class="navbar navbar-expand-sm bg-primary navbar-dark fixed-top">
-  <span class="navbar-brand">
-    Maximum R&D
-  </span>
+  <a class="navbar-brand" href="#">
+    <img src="assets/img/Placeholder_logo_TEMPORARY.png" height="30" alt="">
+  </a>
   <button class="btn btn-primary"
           [routerLink]="['']">
     Home
