--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,7 +1,7 @@
 <footer class="page-footer bg-primary navbar-dark align-bottom">
 
   <div class="text-center py-3">
-    Sample footer text
+    Website under construction
   </div>
 
 </footer>
