--- a/src/app/welcome.component.html
+++ b/src/app/welcome.component.html
@@ -1,25 +1,21 @@
-<!--<!DOCTYPE html>-->
-<!--<html lang="en">-->
-<!--<head>-->
-<!--  <meta charset="UTF-8">-->
-<!--  <title>Title</title>-->
-<!--</head>-->
-<!--<body>-->
-
-<!--</body>-->
-<!--</html>-->
-
 <div class="container" style="margin-top: 100px;">
   <div class="col-sm-12 text-left">
     <h2>
       Welcome page - Title
     </h2>
     <p>
-      Text could the traffic light test
+      Welcome to www.MaximumR&D.co.uk. We are specialists R&D Tax claims
+      and have created an effective and easy to use service to help your company reap the benefits of
+      HRMC’s R&D claims system!
+    </p>
+    <p>
+      If you believe your company could be entitled to claim any amount of tax back on a Research and
+      Design project you have undertaken, take our quick and simple 1 minute test below to see if
+      you qualify for tax relief from HRMC.
     </p>
     <button class="btn btn-primary"
             [routerLink]="['/tltv1']">
-      Traffic light test
+      Take our test!
     </button>
   </div>
 </div>
