UI additions and fixes

--- a/src/app/dialogs/claim-form-help-dialog/claim-form-help-dialog.component.html
+++ b/src/app/dialogs/claim-form-help-dialog/claim-form-help-dialog.component.html
@@ -1,6 +1,6 @@
-<h1>
-  Test text
-</h1>
+<!--<h1>-->
+<!--  Test text-->
+<!--</h1>-->
 <div mat-dialog-content>
   <span *ngIf="data.question === 'question1'">First dialog opened; assign each new dialog to a new number
     to get correct value</span>
