--- a/src/app/helpDialog.html
+++ b/src/app/helpDialog.html
@@ -1,4 +1,4 @@
-<h1 mat-dialog-title>Help dialog</h1>
+<!--<h1 mat-dialog-title>Help dialog</h1>-->
 <div mat-dialog-content>
   <span *ngIf="data.question === 'question1'">Only Limited Companies are eligible for UK tax relief</span>
   <span *ngIf="data.question === 'question2'">Only Companies within the UK are eligible for R&D tax relief </span>
