--- a/src/app/tltv1.component.html
+++ b/src/app/tltv1.component.html
@@ -12,14 +12,14 @@
 <div class="container" style="margin-top: 100px; margin-bottom: 50px">
   <div class="row">
      <div class="col-sm-12">
-       <h2>
-         Traffic light questions
-       </h2>
-       <p>
+<!--       <h2>-->
+<!--         Traffic light questions-->
+<!--       </h2>-->
+       <h5>
          Our quick test below allows us to determine if your company qualifies for R&D tax relief.
          Please answer the questions to the best of your knowledge, as it will help
          us to create the perfect claim for you!
-       </p>
+       </h5>
        <p>
          None of your information will be stored at this point, and you are welcome to back out of
          the test at any time
