--- a/src/app/components/sign-in.component.html
+++ b/src/app/components/sign-in.component.html
@@ -1,4 +1,4 @@
-<div class="displayTable" style="margin-top: 100px">
+<div class="container" style="margin-top: 100px">
   <div class="displayTableCell">
 
     <div class="authBlock">
