--- a/src/app/welcome.component.html
+++ b/src/app/welcome.component.html
@@ -1,10 +1,10 @@
 <div class="container" style="margin-top: 100px;">
   <div class="col-sm-12 text-left">
     <h2>
-      Welcome page - Title
+      Welcome to www.MaximumR&D.co.uk
     </h2>
     <p>
-      Welcome to www.MaximumR&D.co.uk. We are specialists R&D Tax claims
+      We are specialists R&D Tax claims
       and have created an effective and easy to use service to help your company reap the benefits of
       HRMC’s R&D claims system!
     </p>
