--- a/src/app/components/sign-up.component.html
+++ b/src/app/components/sign-up.component.html
@@ -1,37 +1,89 @@
-<div class="displayTable" style="margin-top: 100px">
-  <div class="displayTableCell">
+<div class="container" style="margin-top: 100px">
+  <form [formGroup]="signUpForm">
 
-    <div class="authBlock">
-      <h3>Sign Up</h3>
+<!--    <div class="col-5 mb-2 mx-auto, question_border">-->
+      <h3 style="margin-bottom: 20px">
+        Sign Up
+      </h3>
 
-      <div class="formGroup">
-        <input type="email" class="formControl" placeholder="Email Address" #userEmail required>
+      <div class="form-group">
+        <h6>
+          Email address
+        </h6>
+        <mat-form-field class="col-5 mb-2 mx-auto" appearance="outline">
+          <mat-label>Email</mat-label>
+          <input type="email" matInput formControlName="email"
+                 placeholder="Email">
+          <mat-error *ngIf="signUpForm.get('email').hasError('email') && !signUpForm.get('email').hasError('required')">
+            Please enter a valid email address
+          </mat-error>
+          <mat-error *ngIf="signUpForm.get('email').hasError('required')">
+            Email is <strong>required</strong>
+          </mat-error>
+        </mat-form-field>
       </div>
 
-      <div class="formGroup">
-        <input type="password" class="formControl" placeholder="Password" #userPwd required>
+      <div class="form-group">
+        <h6>
+          Password
+        </h6>
+        <mat-form-field class="col-5 mb-2 mx-auto" appearance="outline">
+          <mat-label>Password</mat-label>
+          <input type="password" matInput formControlName="password"
+                 placeholder="Password">
+          <mat-error *ngIf="signUpForm.get('password').hasError('required')">
+            Password is <strong>required</strong>
+          </mat-error>
+        </mat-form-field>
       </div>
 
-      <div class="formGroup">
-        <input type="button" class="btn btnPrimary" value="Sign Up" (click)="authService.signUp(userEmail.value, userPwd.value)">
+      <div class="form-group">
+        <h6>
+          Confirm password
+        </h6>
+        <mat-form-field class="col-5 mb-2 mx-auto" appearance="outline">
+          <mat-label>Re-enter password</mat-label>
+          <input type="password" matInput formControlName="passwordConfirm"
+                 placeholder="Re-enter password">
+          <mat-error *ngIf="signUpForm.get('passwordConfirm').errors?.passDontMatch">
+            Passwords do <strong>not</strong> match
+          </mat-error>
+          <mat-error *ngIf="signUpForm.get('passwordConfirm').hasError('required')">
+            Confirmation of password is <strong>required</strong>
+          </mat-error>
+        </mat-form-field>
       </div>
+<!--    </div>-->
 
-      <div class="formGroup">
-        <span class="or"><span class="orInner">Or</span></span>
-      </div>
+  </form>
 
-<!--      &lt;!&ndash; Continue with Google &ndash;&gt;-->
-<!--      <div class="formGroup">-->
-<!--        <button type="button" class="btn googleBtn" (click)="authService.googleAuth()">-->
-<!--          <i class="fab fa-google-plus-g"></i>-->
-<!--          Continue with Google-->
-<!--        </button>-->
-<!--      </div>-->
-    </div>
+  <div class="row" *ngIf="isIncomplete()">
+    <button mat-stroked-button disabled>
+      Sign-up
+    </button>
+<!--    <span style="margin-left: 20px">-->
+<!--      Please ensure all fields are filled and valid-->
+<!--    </span>-->
+  </div>
 
-    <div class="redirectToLogin">
-      <span>Already have an account? <span class="redirect" routerLink="/sign-in">Log In</span></span>
-    </div>
+  <div class="row" *ngIf="!isIncomplete()">
+    <button mat-stroked-button (click)="signUp()">
+      Sign-up
+    </button>
+  </div>
+
+  <div>
+    <span>
+      Or <br>Already have an account? <span class="redirect" routerLink="/sign-in" style="cursor: pointer">
+      Log In
+    </span>
+  </span>
   </div>
 
 </div>
+
+
+<!--<mat-error *ngIf="!claimDetails.get('claimEndDate').errors?.dateLessThan &&-->
+<!--              claimDetails.get('claimEndDate').errors?.endDateMoreThanYear">-->
+<!--  End date <strong>should not</strong> more than 1 year after start date-->
+<!--</mat-error>-->
