Added frount end payment

--- a/src/app/nav.component.html
+++ b/src/app/nav.component.html
@@ -6,6 +6,28 @@
           [routerLink]="['/members']">
     Dashboard
   </button>
+<!--    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">-->
+<!--      Dropdown-->
+<!--    </a>-->
+<!--    <div class="dropdown-menu" aria-labelledby="Location">-->
+<!--      <a class="dropdown-item" href="#">UK</a>-->
+<!--      <a class="dropdown-item" href="#" matTooltip="Info about the action">Ireland</a>-->
+<!--    </div>-->
+<!--  <div class="btn-group" mdbDropdown>-->
+<!--    <button mdbDropdownToggle type="button" mdbBtn color="primary" class="dropdown-toggle waves-light"-->
+<!--            mdbWavesEffect>-->
+<!--      Basic dropdown-->
+<!--    </button>-->
+
+<!--    <div class="dropdown-menu dropdown-primary">-->
+<!--      <a class="dropdown-item" href="#">Action</a>-->
+<!--      <a class="dropdown-item" href="#">Another action</a>-->
+<!--      <a class="dropdown-item" href="#">Something else here</a>-->
+<!--      <div class="divider dropdown-divider"></div>-->
+<!--      <a class="dropdown-item" href="#">Separated link</a>-->
+<!--    </div>-->
+<!--  </div>-->
+
   <button class="btn btn-primary" *ngIf="!authService.isLoggedIn"
           [routerLink]="['/sign-in']">
     Sign-in
