--- a/src/app/test.component.html
+++ b/src/app/test.component.html
@@ -1,5 +1,5 @@
-<h1 style="margin-top: 100px">
-  {{test.name}}
-</h1>
+<!--<h1 style="margin-top: 100px">-->
+<!--  {{test.name}}-->
+<!--</h1>-->
 
-<button class="btn btn-primary" (click)="pleaseJustRead()">log</button>
+<!--<button class="btn btn-primary" (click)="pleaseJustRead()">log</button>-->
