--- a/src/app/dialogs/new-claim-dialog/new-claim-dialog.component.html
+++ b/src/app/dialogs/new-claim-dialog/new-claim-dialog.component.html
@@ -18,11 +18,11 @@
     </mat-form-field>
   </div>
 
-  // TODO fix this
   <div class="form-group">
     <mat-form-field class="small-width" appearance="outline">
       <mat-label>Start date</mat-label>
-      <input matInput [matDatepicker]="claimStartDatePicker" formControlName="claimStartDate" disabled>
+      <input matInput [matDatepicker]="claimStartDatePicker" formControlName="claimStartDate"
+             disabled (dateChange)="onClaimStartDateChange()">
       <mat-datepicker-toggle matSuffix [for]="claimStartDatePicker"></mat-datepicker-toggle>
       <mat-datepicker #claimStartDatePicker disabled="false"></mat-datepicker>
     </mat-form-field>
@@ -31,7 +31,7 @@
       <mat-label>End date</mat-label>
       <input matInput [matDatepicker]="claimEndDatePicker" formControlName="claimEndDate" disabled>
       <mat-datepicker-toggle matSuffix [for]="claimEndDatePicker"></mat-datepicker-toggle>
-      <mat-datepicker #claimEndDatePicker></mat-datepicker>
+      <mat-datepicker #claimEndDatePicker [disabled]="claimEndDateDisabled"></mat-datepicker>
       <mat-error *ngIf="claimDetails.get('claimEndDate').errors?.dateLessThan &&
               !claimDetails.get('claimEndDate').errors?.endDateMoreThanYear">
         End date <strong>should not</strong> be before start date
