--- a/src/app/components/stripe-checkout/stripe-checkout.component.html
+++ b/src/app/components/stripe-checkout/stripe-checkout.component.html
@@ -1,11 +1,9 @@
-<button (click)="checkout($event)" style="margin-top: 100px">
-
-  Buy for £{{amount / 100}}.00
-
+<button (click)="test()" style="margin-top: 100px">
+  Check-out
 </button>
 
-<hr>
+<!--<hr>-->
 
-<div *ngIf="loading">Loading...</div>
-<pre *ngIf="confirmation">{{ confirmation | json }}</pre>
+<!--<div *ngIf="loading">Loading...</div>-->
+<!--<pre *ngIf="confirmation">{{ confirmation | json }}</pre>-->
 
