Added stripe checkout to sign up and new claim form

--- a/src/app/components/stripe-checkout/stripe-checkout.component.html
+++ b/src/app/components/stripe-checkout/stripe-checkout.component.html
@@ -1,6 +1,6 @@
-<button (click)="test()" style="margin-top: 100px">
-  Check-out
-</button>
+<!--<button (click)="checkout()" style="margin-top: 100px">-->
+<!--  Check-out-->
+<!--</button>-->
 
 <!--<hr>-->
 
