--- a/src/app/components/sign-in.component.html
+++ b/src/app/components/sign-in.component.html
@@ -95,7 +95,8 @@
   <div>
     <span routerLink="/forgot-password" style="cursor: pointer">Forgot Password?</span>
     <br>
-    <span>Don't have an account?<span class="redirect" routerLink="/register-user" style="cursor: pointer"> Sign Up</span></span>
+    <span>Don't have an account? <span class="redirect" routerLink="/tltv1" style="cursor: pointer">Please take this (traffic light test) [change this] to see if you can make an account</span></span>
+<!--    <span>Don't have an account?<span class="redirect" routerLink="/register-user" style="cursor: pointer"> Sign Up</span></span>-->
   </div>
 
 </div>
