Atampt to imporove the authentication

--- a/src/app/components/member/member.component.html
+++ b/src/app/components/member/member.component.html
@@ -45,9 +45,9 @@
         You do not currently have any claims. A claim can be added by pressing the button above.
       </p>
     </div>
-<!--    <p (click)="test()" style="cursor: pointer">-->
-<!--      test-->
-<!--    </p>-->
+    <p (click)="test()" style="cursor: pointer">
+      test
+    </p>
 
   </div>
 </div>
