--- a/src/app/claimForm.component.html
+++ b/src/app/claimForm.component.html
@@ -488,6 +488,64 @@
             </mat-autocomplete>
           </mat-form-field>
 
+          <div class="form-group">
+            <h6>
+              Does your company have 500 staff or less?
+            </h6>
+          <div class="row">
+            <div class="justify-content-lg-around" style="padding-left: 15px">
+              <mat-radio-group class="form-control" formControlName="staff"
+                               aria-label="Select an option">
+                <mat-radio-button value="yes">yes</mat-radio-button>
+                <mat-radio-button value="no">no</mat-radio-button>
+              </mat-radio-group>
+            </div>
+<!--            <mat-icon aria-hidden="false" aria-label="Example info icon"-->
+<!--                      (click)="openHelpDialog('state_aid')"-->
+<!--                      style="cursor: pointer">help_outline-->
+<!--            </mat-icon>-->
+          </div>
+        </div>
+
+        <div class="form-group">
+          <h6>
+            Does your company have an annual turnover of 100 Million Euros or less, or a
+            Balance Sheet total of under 86 Million Euros?
+          </h6>
+          <div class="row">
+            <div class="justify-content-lg-around" style="padding-left: 15px">
+              <mat-radio-group class="form-control" formControlName="turnover"
+                               aria-label="Select an option">
+                <mat-radio-button value="yes">yes</mat-radio-button>
+                <mat-radio-button value="no">no</mat-radio-button>
+              </mat-radio-group>
+            </div>
+<!--            <mat-icon aria-hidden="false" aria-label="Example info icon"-->
+<!--                      (click)="openHelpDialog('state_aid')"-->
+<!--                      style="cursor: pointer">help_outline-->
+<!--            </mat-icon>-->
+          </div>
+        </div>
+
+          <div class="form-group">
+            <h6>
+              Does the project involve the development of software?
+            </h6>
+            <div class="row">
+              <div class="justify-content-lg-around" style="padding-left: 15px">
+                <mat-radio-group class="form-control" formControlName="developmentOfSoftware"
+                                 aria-label="Select an option">
+                  <mat-radio-button value="yes">yes</mat-radio-button>
+                  <mat-radio-button value="no">no</mat-radio-button>
+                </mat-radio-group>
+              </div>
+<!--              <mat-icon aria-hidden="false" aria-label="Example info icon"-->
+<!--                        (click)="openHelpDialog('state_aid')"-->
+<!--                        style="cursor: pointer">help_outline-->
+<!--              </mat-icon>-->
+            </div>
+          </div>
+
         </div>
       </form>
 
